# sketch

./: .gitignore  CMakeLists.txt  README.md  example.sketch
public/: sketch.hpp
public/sketch/: application.hpp  reactor.hpp  window.hpp
src/: annotation.hpp  application.cpp  error_handler.hpp  fps_ctl.cpp  fps_ctl.hpp  reactor.cpp  sdl2_display.cpp  sdl2_display.hpp  sketch.cpp  sketch_grammar.cpp  sketch_grammar.hpp  sketch_test.cpp  window.cpp  window.hpp
